Fix pill visibility with dark theme

--- a/res/themes/legacy-dark/css/_legacy-dark.scss
+++ b/res/themes/legacy-dark/css/_legacy-dark.scss
@@ -11,7 +11,7 @@ $text-primary-color: #ffffff;
 $text-secondary-color: #b3b3b3;
 $search-bg-color: #303030;
 $search-placeholder-color: #616161;
-$room-highlight-color: #424242;
+$room-highlight-color: #616161;
 
 // typical text (dark-on-white in light skin)
 $primary-fg-color: $text-primary-color;
